--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "start": "nodemon server.js"
   },
-  
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -17,6 +16,7 @@
     "express-session": "^1.17.2",
     "mongoose": "^6.0.11",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.7.0",
     "nodemon": "^2.0.13"
   }
 }
