Added DB URL string to config file

--- a/backend/config.env
+++ b/backend/config.env
@@ -1,4 +1,4 @@
 PORT=5950
 MONGO_USERNAME=sabin2000
 MONGO_PASSWORD=123mini123
-DB_URI=
+DB_URI=mongodb+srv://sabin2000:123mini123@cluster0.sjkmj.mongodb.net/destore?retryWrites=true&w=majority
