--- a/backend/config.env
+++ b/backend/config.env
@@ -2,3 +2,5 @@ PORT=5950
 MONGO_USERNAME=sabin2000
 MONGO_PASSWORD=123mini123
 DB_URI=mongodb+srv://sabin2000:123mini123@cluster0.sjkmj.mongodb.net/destore?retryWrites=true&w=majority
+JWT_SECRET=adminjwtsecretdonotmodifyplease
+JWT_EXPIRES_IN=90d
