--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.5.0",
     "express-rate-limiter": "^1.3.1",
     "express-session": "^1.17.2",
     "ip": "^1.1.5",
