--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "test": "jest --watchAll"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,7 @@
     "express-rate-limiter": "^1.3.1",
     "express-session": "^1.17.2",
     "ip": "^1.1.5",
+    "jest": "^27.3.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.11",
     "morgan": "^1.10.0",
