--- a/backend/package.json
+++ b/backend/package.json
@@ -12,15 +12,18 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.5.0",
     "express-rate-limiter": "^1.3.1",
     "express-session": "^1.17.2",
+    "helmet": "^4.6.0",
     "ip": "^1.1.5",
     "jest": "^27.3.1",
     "jsonwebtoken": "^8.5.1",
+    "mongo-sanitize": "^1.1.0",
     "mongoose": "^6.0.11",
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.0",
