--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "express-rate-limiter": "^1.3.1",
     "express-session": "^1.17.2",
     "helmet": "^4.6.0",
+    "hpp": "^0.2.3",
     "ip": "^1.1.5",
     "jest": "^27.3.1",
     "jsonwebtoken": "^8.5.1",
