Added code to send e-mail if stock is low

--- a/backend/config.env
+++ b/backend/config.env
@@ -4,3 +4,8 @@ MONGO_PASSWORD=123mini123
 DB_URI=mongodb+srv://sabin2000:123mini123@cluster0.sjkmj.mongodb.net/destore?retryWrites=true&w=majority
 JWT_SECRET=adminjwtsecretdonotmodifyplease
 JWT_EXPIRES_IN=90d
+EMAIL_HOST=smtp.mailtrap.io
+EMAIL_PORT=2525
+EMAIL_USER=3988cb4df785f3
+EMAIL_PASS=0b05b57359e8c7
+EMAIL_FROM=sabinlungu293@gmail.com
