--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.23.0",
+    "file-saver": "^2.0.5",
     "jest-dom": "^4.0.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
