--- a/backend/config.env
+++ b/backend/config.env
@@ -4,6 +4,7 @@ MONGO_PASSWORD=123mini123
 DB_URI=mongodb+srv://sabin2000:123mini123@cluster0.sjkmj.mongodb.net/destore?retryWrites=true&w=majority
 JWT_SECRET=adminjwtsecretdonotmodifyplease
 JWT_EXPIRES_IN=90d
+JWT_COOKIE_EXPIRES_IN=90
 EMAIL_HOST=smtp.mailtrap.io
 EMAIL_PORT=2525
 EMAIL_USER=3988cb4df785f3
