--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.0",
     "nodemon": "^2.0.13",
+    "pdfkit": "^0.13.0",
     "supertest": "^6.1.6",
     "xss-clean": "^0.1.1"
   }
