--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services: 
-
-  web:
+  
+  backend:
     build:
       context: .
       dockerfile: Dockerfile
@@ -11,7 +11,7 @@ services:
       - /app/node_modules
       - .:/app
 
-  mongo:
+  database:
     image: mongo
     restart: always
     ports:
