--- a/backend/package.json
+++ b/backend/package.json
@@ -35,5 +35,8 @@
     "pdfkit": "^0.13.0",
     "supertest": "^6.1.6",
     "xss-clean": "^0.1.1"
+  },
+  "devDependencies": {
+    "cypress": "^9.0.0"
   }
 }
