--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.23.0",
+    "cypress": "^9.0.0",
     "file-saver": "^2.0.5",
     "jest-dom": "^4.0.0",
     "node-sass": "^6.0.1",
@@ -23,6 +24,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "testt": "cypress open",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
