--- a/backend/.travis.yml
+++ b/backend/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t sabin2000/DEStore
+  - docker build -t sabin2000/DEStore -f Dockerfile.dev .
 
 script:
   - docker run -e CI=true sabin2000/DEStore npm run test -- --coverage
