--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,10 +1,10 @@
 version: '3'
 services: 
-  
+
   backend:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     ports: 
       - "5950:5950"
     volumes: 
