--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,10 +1,6 @@
-FROM node:alpine as builder
+FROM node:alpine
 WORKDIR '/app'
 COPY package.json .
 RUN npm install
 COPY . .
-RUN npm run build
-
-FROM nginx
-COPY --from=builder /app/build /usr/share/nginx/html
-ENV NODE_OPTIONS=--openssl-legacy-provider
+CMD [ "npm", "run", "start"]
