--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   backend:
     build:
       context: .
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
     ports: 
       - "5950:5950"
     volumes: 
@@ -33,7 +33,7 @@ services:
   tests:
     build:
       context: .
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
     volumes:
       - /app/node_modules
       - .:/app
