--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3'
 services: 
 
+  #: Docker Service for the back-end
   backend:
     build:
       context: .
@@ -11,6 +12,7 @@ services:
       - /app/node_modules
       - .:/app
 
+  #: Docker service for the database. Parameters: Image, Restart, Ports, Volumes, Environment and Healthcheck
   database:
     image: mongo
     restart: always
@@ -28,7 +30,7 @@ services:
       test: echo 'db.stats().ok' | mongo localhost:27017/destore --quiet
       interval: 10s
       timeout: 10s
-      retries: 10
+      retries: 5
 
   tests:
     build:
